Refactor: extracted CakeHandler and OrderHandler from CommandHandler and modernized method usage after java version upgrade